[gd_scene load_steps=17 format=3 uid="uid://dc7il20758ygn"]

[ext_resource type="Script" uid="uid://hpvx6xkk5mpx" path="res://scripts/ui/main_menu.gd" id="1_d0lsa"]
[ext_resource type="Texture2D" uid="uid://bcgtdxaagvhkt" path="res://sprites/planet_bg_x_tiled.png" id="2_btxxm"]
[ext_resource type="Script" uid="uid://dhdegvwwqihjl" path="res://scripts/ui/planet_scroll.gd" id="2_wb0q5"]
[ext_resource type="Texture2D" uid="uid://betg7a3ip4o7b" path="res://sprites/logo_outlined.png" id="2_x2yvf"]
[ext_resource type="Theme" uid="uid://cnveursukjnnk" path="res://theme/theme.tres" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bgu84p0ynt576" path="res://sprites/planet_mask_dark.png" id="3_wb0q5"]
[ext_resource type="Script" uid="uid://b6th40bbhl4o1" path="res://scripts/ui/animation_component.gd" id="4_m1kxf"]
[ext_resource type="Shader" uid="uid://bihefvptsdmt5" path="res://scenes/ui/stars.gdshader" id="5_7suek"]
[ext_resource type="Texture2D" uid="uid://dxisvqa87ghix" path="res://sprites/stars_main_menu.png" id="5_8g5eo"]
[ext_resource type="FontFile" uid="uid://c6h3we4j2dvbf" path="res://fonts/GravityBold8.ttf" id="5_q85j6"]

[sub_resource type="Gradient" id="Gradient_q85j6"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(0.23137255, 0.23921569, 0.52156866, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8g5eo"]
gradient = SubResource("Gradient_q85j6")
width = 1920
height = 1080

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7suek"]
texture = SubResource("GradientTexture2D_8g5eo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_otr3d"]
shader = ExtResource("5_7suek")
shader_parameter/twinkle_speed = 2.0
shader_parameter/min_brightness = 0.55
shader_parameter/grid_size = 16.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_otr3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8g5eo"]
bg_color = Color(0.23137255, 0.23921569, 0.5254902, 1)

[node name="MainMenu" type="CanvasLayer"]
layer = 0
script = ExtResource("1_d0lsa")

[node name="InnerMenu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7suek")

[node name="PlanetScroll" type="Parallax2D" parent="InnerMenu"]
scroll_offset = Vector2(265.75, 0)
repeat_size = Vector2(640, 0)
autoscroll = Vector2(30, 0)
repeat_times = 2
script = ExtResource("2_wb0q5")

[node name="PlanetTexture" type="TextureRect" parent="InnerMenu/PlanetScroll"]
offset_top = 30.0
offset_right = 640.0
offset_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_btxxm")
expand_mode = 3
stretch_mode = 6

[node name="PlanetMask" type="TextureRect" parent="InnerMenu"]
layout_mode = 2
texture = ExtResource("3_wb0q5")
expand_mode = 3
stretch_mode = 6

[node name="PlanetStars" type="TextureRect" parent="InnerMenu"]
material = SubResource("ShaderMaterial_otr3d")
layout_mode = 2
texture = ExtResource("5_8g5eo")
expand_mode = 3
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="InnerMenu"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PanelContainer" type="PanelContainer" parent="InnerMenu/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_otr3d")

[node name="MarginContainer" type="MarginContainer" parent="InnerMenu/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 32

[node name="StartGameButton" type="Button" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_bqqt6")
theme_type_variation = &"GameMenuButton"
theme_override_fonts/font = ExtResource("5_q85j6")
theme_override_font_sizes/font_size = 18
text = "Start game"

[node name="AnimationComponent2" type="Node" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/StartGameButton"]
script = ExtResource("4_m1kxf")
metadata/_custom_type_script = "uid://b6th40bbhl4o1"

[node name="VBoxContainer" type="VBoxContainer" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="OptionsOpenButton" type="Button" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_bqqt6")
theme_type_variation = &"GameMenuButton"
text = "Options"

[node name="AnimationComponent2" type="Node" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/OptionsOpenButton"]
script = ExtResource("4_m1kxf")
metadata/_custom_type_script = "uid://b6th40bbhl4o1"

[node name="CreditsOpenButton" type="Button" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_bqqt6")
theme_type_variation = &"GameMenuButton"
text = "Credits"

[node name="AnimationComponent2" type="Node" parent="InnerMenu/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/CreditsOpenButton"]
script = ExtResource("4_m1kxf")
metadata/_custom_type_script = "uid://b6th40bbhl4o1"

[node name="Line" type="Panel" parent="InnerMenu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_8g5eo")

[node name="Line2" type="Panel" parent="InnerMenu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_8g5eo")

[node name="MarginContainer" type="MarginContainer" parent="InnerMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 0

[node name="Logo" type="TextureRect" parent="InnerMenu/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(213, 213)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("2_x2yvf")
stretch_mode = 5

[node name="Options" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="InnerMenu" type="PanelContainer" parent="Options"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_bqqt6")
theme_type_variation = &"GameMenuPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Options/InnerMenu"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Options/InnerMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/InnerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Options"

[node name="OptionsCloseButton" type="Button" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"GameMenuButton"
text = "X"

[node name="AnimationComponent2" type="Node" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2/OptionsCloseButton"]
script = ExtResource("4_m1kxf")
metadata/_custom_type_script = "uid://b6th40bbhl4o1"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/InnerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_type_variation = &"MenuSlider"
max_value = 1.0
step = 0.001
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_type_variation = &"MenuSlider"
max_value = 1.0
step = 0.001

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "SFX volume"

[node name="SFXVolumeSlider" type="HSlider" parent="Options/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_type_variation = &"MenuSlider"
max_value = 1.0
step = 0.001

[node name="Credits" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="InnerMenu" type="PanelContainer" parent="Credits"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"GameMenuPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Credits/InnerMenu"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/InnerMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer2" type="HBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Credits"

[node name="CreditsCloseButton" type="Button" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"GameMenuButton"
text = "X"

[node name="AnimationComponent2" type="Node" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2/CreditsCloseButton"]
script = ExtResource("4_m1kxf")
metadata/_custom_type_script = "uid://b6th40bbhl4o1"

[node name="HBoxContainer" type="HBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8627451, 0.40392157, 1)
text = "ART, MUSIC:"

[node name="Label2" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "prodcautious"

[node name="HBoxContainer4" type="HBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8627451, 0.40392157, 1)
text = "ART, MUSIC:"

[node name="Label2" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
text = "chariot"

[node name="HBoxContainer2" type="HBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.24705882, 0.75686276, 0.84705883, 1)
text = "Programming:"

[node name="Label2" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "bognari"

[node name="HBoxContainer3" type="HBoxContainer" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.24705882, 0.75686276, 0.84705883, 1)
text = "Programming:"

[node name="Label2" type="Label" parent="Credits/InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
text = "iocutus"
